syntax = "proto3";
package strangelove_ventures.poa.v1;

import "cosmos/staking/v1beta1/staking.proto";
import "strangelove_ventures/poa/v1/validator.proto";
import "strangelove_ventures/poa/v1/params.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";

option go_package = "github.com/strangelove-ventures/poa";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;  

  // x/staking wrappers (future)
  // rpc CreateValidator(MsgCreateValidator) returns (MsgCreateValidatorResponse);  
  
  // SetPower sets the new power of a validator.
  rpc SetPower(MsgSetPower) returns (MsgSetPowerResponse);

  // RemoveValidator removes a validator from the active set and unbonds their delegations.
  rpc RemoveValidator(MsgRemoveValidator) returns (MsgRemoveValidatorResponse);

  // UpdateParams updates the module parameters.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// SetPower sets the power of a validator
message MsgSetPower {
  option (cosmos.msg.v1.signer) = "from_address";
  option (amino.name)           = "poa/MsgSetPower";

  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string from_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 power = 3;  
}
// MsgSetPowerResponse
message MsgSetPowerResponse {}

// MsgRemoveValidator removes an active validitor from the set
// jail -> deleted
message MsgRemoveValidator {
  option (cosmos.msg.v1.signer) = "from_address";
  option (amino.name)           = "poa/MsgRemoveValidator";

  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string from_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];    
}
// MsgSetPowerResponse
message MsgRemoveValidatorResponse {}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "from_address";

  // from_address is the address of the admin account with permission to update.
  // ex: governance, multisig/DAO, or standard account found in Params.
  string from_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // module parameters (all must be supplied). 
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}